// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render default 1`] = `
<li
  className="section-header"
>
  <h1
    className="title"
  />
</li>
`;

exports[`should render with callback functions 1`] = `
<li
  className="section-header"
>
  <h1
    className="title"
  />
</li>
`;

exports[`should render with isCollapsed 1`] = `
<li
  className="section-header"
>
  <h1
    className="title"
  />
</li>
`;

exports[`should render with isCollapsible 1`] = `
<li
  aria-expanded={true}
  aria-level={1}
  className="section-header is-collapsible"
  data-focusable="true"
  onBlur={[Function]}
  onMouseDown={[Function]}
  role="heading"
  tabIndex="0"
>
  <div
    className="start"
  >
    <span
      className="accordion-icon is-open"
    />
  </div>
  <div
    className="fill"
  >
    <h1
      className="title"
    />
  </div>
</li>
`;

exports[`should render with title 1`] = `
<li
  className="section-header"
>
  <h1
    className="title"
  >
    Test Title
  </h1>
</li>
`;

exports[`should render with title and level 1`] = `
<li
  className="section-header"
>
  <h3
    className="title"
  >
    Test Title
  </h3>
</li>
`;
